# tcl-parse-test

./: .clang-format  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  Makefile  README  parse.cpp  test.tcl  vimrc_ycm.vim
src/: CMakeLists.txt  analyzer.cpp  db.cpp  index.cpp  parse.cpp  script.cpp  server.cpp  source_location.cpp
src/analyzer/: db.cpp  index.cpp  script.cpp  source_location.cpp
src/lsp/: comms.cpp  handlers.cpp  parse_manager.cpp  server.hpp  types.cpp
test/: simple.tcl  test.tcl
test/docker/: rebuild  run
test/docker/image/: Dockerfile
test/lsp/: .gitignore  input  input2
